Stop book items from stretching

--- a/style.css
+++ b/style.css
@@ -121,7 +121,9 @@ button.add-book:hover {
     justify-self: stretch;
     display: grid;
     gap: var(--books-container-gap);
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    justify-content: center;
+    /* grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); */
+    grid-template-columns: repeat(auto-fit, 300px);
 }
 
 .book-item {
